--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                         alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Y</h5>
-                        <button class="btn btn-primary" onclick="apple('Y')">Yak</button>
+                        <button class="btn btn-primary" onclick="apple('y')">Yak</button>
                         <audio id="speaker"></audio>
 
                     </div>
